<resources>
    <string name="app_title">Contact Ringtones</string>
    <string name="app_directory">/ContactRingtones/</string>
    <string name="app_old_directory">/AutomatonAlert/</string>
    <string name="widget_title_2x1">Contact Ringtones 2x1</string>
    <string name="widget_title_3x1">Contact Ringtones 3x1</string>
    <string name="empty_string"></string>
    <string name="asm_instructions1_note">Enter your email address and password, we\'ll try to find your IMAP server for you.</string>
    <string name="asm_instructions2_note">Still having trouble finding your server? Try doing a Web Search below.</string>
    <string name="quiet_time_note">Ringtones will be silent between these hours. Tap Clear for no Quiet Time. Vibration settings are not affected.</string>
    <string name="email_example">email@address.com</string>
    <string name="imap_server_example">imap.server.com</string>
    <string name="override_alert_volume_desc">Override volume</string>
    <string name="pause_all_alerts_and_alarms_desc">Pause all alerts and alarms</string>
    <string name="silence_all_sounds_desc">Silence all sounds</string>
    <string name="goto_app_desc">Go To App</string>
    <string name="about_label">About</string>
    <string name="add_new_search_set_label">Add New Search Set</string>
    <string name="clear_label">Clear</string>
    <string name="contacts_label">Contacts</string>
    <string name="delete_label">Delete</string>
    <string name="empty_message_header_label">--Empty Message Header--</string>
    <string name="end_time_label">End Time</string>
    <string name="find_server_label">Find Server</string>
    <string name="help_main">Help</string>
    <string name="licensed_code_label">Licenses</string>
    <string name="message_view_label">Message View</string>
    <string name="next_label">Next…</string>
    <string name="password_label">Password</string>
    <string name="search_set_label">Search Set</string>
    <string name="show_images_label">Show Images</string>
    <string name="snooze_duration_label">Snooze Duration</string>
    <string name="snooze_label">Snooze</string>
    <string name="start_time_label">Start Time</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="licenses_android_open_source_files">AccountSettings.java, DomainNameChecker.java, providers.xml, TrustManagerFactory.java</string>
    <string name="licenses_android_open_source">Copyright © 2009 The Android Open Source Project</string>
    <string name="licenses_apache_2_0_files">AccountSettingsUtils.java, Base64InputStream.java, ByteArrayOutputStream.java, ByteQueue.java, DomainNameChecker.java, IOUtils.java, LineIterator.java, providers.xml, QuotedPrintableInputStream.java, TrustManagerFactory.java, UnboundedFifoByteBuffer.java</string>
    <string name="licenses_apache_2_0">Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements.  See the NOTICE file distributed with this work for additional information regarding copyright ownership.  The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.  You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="title_activity_ringtone_list">RingtoneList</string>
    <string name="title_activity_contact_list">Contact Ringtones</string>
    <string name="title_activity_set_alert_activity_new">Set Alert</string>
    <string name="vc_subtitle">Tie "Volume Default" in the volume circle to a system volume or customize at your own level.</string>
    <string name="rupf_default_text_info"><![CDATA[You are setting the Global Text Ringtone.\nPress <back> to return.]]></string>
    <string name="title_volume_chooser">Choose \"Volume Default\" Volume Level</string>
    <string name="contact_search_empty_list"><![CDATA[You have no contacts!<br><br>Tap here to add one.]]></string>
    <string name="contact_favorite_empty_list"><![CDATA[The favorites list is empty.<br><br>TIP: Tap a contact\'s star to make it a favorite.<br><br>Tap here to show contacts.]]></string>
    <string name="contact_active_empty_list"><![CDATA[The active/edit list is empty.<br><br>TIP: Tap a contact\'s text, phone or email icon to create a ringtone.<br><br>Tap here to show contacts.]]></string>
    <string name="alert_list_empty_list"><![CDATA[This list is empty.<br>(<u><i>Why?</i></u>)]]></string>
    <string name="free_form_empty_list"><![CDATA[There are no free form alerts.<br><br>TIP: Tap \"+\" in the blue ribbon below to add an alert.]]></string>
    <string name="title_activity_fragment_wrapper">Settings</string>
    <string name="account_add_update_imap_explanation1">Contact Ringtones supports Secure IMAP only. POP and Exchange not supported. Your password is encrypted.</string>
    <string name="find_server_web_search_label">Tap HERE for a Web Search</string>
    <string name="purchases">Purchase Options</string>
    <string name="title_activity_take_atour">Take A Tour</string>
    <string name="cd_set_reminder">Set Reminder</string>
    <string name="cd_set_slash_edit_alarm">Set/Edit Alarm</string>
    <string name="show_message_label">Show Message</string>
    <string name="cd_icon_separator">icon separator</string>
    <string name="repeat_hash_colon_label">Repeat #:</string>
    <string name="last_colon_label">Last:</string>
    <string name="original_colon_label">Original:</string>
    <string name="next_colon_label">Next:</string>
    <string name="in_app_purchase_upgrade_2_description">Unlimited Everything\nBackup/Restore</string>
    <string name="n_slash_a_label">N/A</string>
    <string name="starred_introductory_offer_label">*Introductory Offer*</string>
    <string name="ru_update_fragment_accounts_button_label">Add/Modify Email Accounts</string>
    <string name="every_colon_label">Every:</string>
    <string name="settings_label">Settings</string>
    <string name="ru_update_fragment_clear_ringtone_button_label">Clear Ringtone</string>
    <string name="exactly_blue_indicates_a_ringtone">Blue indicates a ringtone</string>
    <string name="exactly_grey_indicates_no_ringtone">Grey indicates no ringtone</string>
    <string name="purchase_uc_label">PURCHASE</string>
    <string name="test_exclamation_point_label">Test!</string>
    <string name="stop_label">Stop</string>
    <string name="ringtone_label">Ringtone</string>
    <string name="tour_page_contact_edit_how_to_edit_ringtone">Edit a ringtone by pressing \nText, Phone, Email</string>
    <string name="tour_page_contact_new_how_to_add_ringtone">Add a ringtone by pressing \nText, Phone, Email</string>
    <string name="tour_page_turn_off_other_apps_ringtones">Be sure to turn off ringtones in your other text messaging apps</string>
    <string name="volume_dial_label">Volume Dial</string>
    <string name="show_alarm_newline_screen_label">Show Alarm\nScreen</string>
    <string name="volume_chooser_custom_label">Custom</string>
    <string name="in_app_purchases_upgrade_1_description">25 Contacts \n25 Free-Form Alerts\n5 Email Accounts</string>
    <string name="tour_page_register_account_now_button_label">Press HERE to Register Now</string>
    <string name="tour_page_set_global_ringtone_button_label">Press HERE to Set Global Ringtone Now</string>
    <string name="light_label">Light</string>
    <string name="help_licenses_button_label">Licenses</string>
    <string name="in_app_purchases_upgrade_title">Upgrade</string>
    <string name="tour_page_be_sure_to_register_account">For email ringtones to work, be sure to register an email account.</string>
    <string name="tour_page_global_ringtone_explanation">The Global Text Ringtone plays for all other contacts\' text messages</string>
    <string name="stop_after_label">Stop After</string>
    <string name="notification_label">Notification</string>
    <string name="cd_alarm_volume">Alarm Volume</string>
    <string name="help_licenses_title">Licenses Used in Contact Ringtones</string>
    <string name="main_reminders_header">Reminders</string>
    <string name="cd_expland_collapse">Expand/Collapse</string>
    <string name="tour_page_dont_forget_title">Don\'t Forget!</string>
    <string name="tour_page_ringtone_icons_title">Ringtone Icons</string>
    <string name="alarm_header">Alarm</string>
    <string name="tour_page_change_global_ringtone_title">You\'ll want to change the Global Ringtone</string>
    <string name="vibrate_label">Vibrate</string>
    <string name="repeat_every_label">Repeat Every</string>
    <string name="cd_email_ringtone_screenshot">Email Ringtone Screenshot</string>
    <string name="cd_ignore">ignore</string>
    <string name="save_label">Save</string>
    <string name="search_label">Search</string>
    <string name="silent_label">Silent</string>
    <string name="refresh_label">Refresh</string>
    <string name="trash_label">Trash</string>
    <string name="exit_uc_label">EXIT</string>
    <string name="low_label">Low</string>
    <string name="app_icon_label">App Icon</string>
    <string name="alarm_label">Alarm</string>
    <string name="page_1_label">Page 1</string>
    <string name="page_2_label">Page 2</string>
    <string name="page_3_label">Page 3</string>
    <string name="page_4_label">Page 4</string>
    <string name="page_5_label">Page 5</string>
    <string name="select_label">Select</string>
    <string name="text_ringtone_label">Text Ringtone</string>
    <string name="phone_ringtone_label">Phone Ringtone</string>
    <string name="email_ringtone_label">Edit Ringtone</string>
    <string name="set_alert_activity_show_alarm_screen_must_have_spaces_label">Show Alarm    \nScreen</string>
    <string name="inbox_slash_saved_label">Inbox/Saved</string>
    <string name="clear_reminders_label">Clear Reminders</string>
    <string name="clear_repeats_label">Clear Repeats</string>
    <string name="clear_snoozed_label">Clear Snoozed</string>
    <string name="clear_newline_ringtones_label">Clear\nRingtones</string>
    <string name="silent_mode_label">Silent Mode</string>
    <string name="icon_label">Icon</string>
    <string name="less_than_symbol_prev_label"><![CDATA[<Prev]]></string>
    <string name="next_greater_than_symbol_label"><![CDATA[Next>]]></string>
    <string name="medium_label">Medium</string>
    <string name="high_label">High</string>
    <string name="dont_override_label">Don\'t Override</string>
    <string name="expand_label">Expand</string>
    <string name="collapse_label">Collapse</string>
    <string name="unselect_label">Unselect</string>
    <string name="currently_newline_unavailable_label">Currently \nUnavailable</string>
    <string name="purchased_label">Purchased</string>
    <string name="play_for_label">Play For</string>
    <string name="reminders_label">Reminders</string>
    <string name="perform_action_label">Action</string>
    <string name="cd_notification_volume">Notification Volume</string>
    <string name="cancel_label">Cancel</string>
    <string name="cd_global_ringtone_screenshot">Global Ringtone Screenshot</string>
    <string name="cd_contact_edit_tab_screenshot">Contact Edit Tab Screenshot</string>
    <string name="cd_new_contact_screenshot">New Contact Screenshot</string>
    <string name="tour_page_contacts_edit_tab_title">The Edit Tab: Contacts with Ringtones</string>
    <string name="tour_page_new_contacts_tab_title">The New Tab: A List of All Your Contacts</string>
    <string name="dash">-</string>
    <string name="dont_vibrate_either">Don\'t vibrate either</string>
</resources>