<?xml version="1.0" encoding="utf-8"?>

<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silent_label"
        android:id="@+id/ov_silent"
        android:checked="false"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_label"
        android:id="@+id/ov_low"
        android:checked="false"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_label"
        android:id="@+id/ov_medium"
        android:checked="false"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_label"
        android:id="@+id/ov_high"
        android:checked="false"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_override_label"
        android:id="@+id/ov_default"
        android:checked="false"/>
</RadioGroup>
