<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/widget_frame">

    <TextView
        android:id="@+id/sqt_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/quiet_time_note"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        />

    <Button
        android:id="@+id/sqt_start_time"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/sqt_summary"
        android:layout_marginLeft="12dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:textSize="17sp"
        android:textStyle="bold"
        android:padding="2dp"
        android:text="@string/start_time_label"
        android:textColor="#000000"
        />

    <TextView android:id="@+id/sqt_dash"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/sqt_summary"
              android:layout_marginTop="4dp"
              android:layout_toRightOf="@id/sqt_start_time"
              android:layout_alignBottom="@id/sqt_start_time"
              android:text="@string/dash"
              android:textSize="30sp"/>

    <Button android:id="@+id/sqt_end_time"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/sqt_dash"
            android:layout_below="@id/sqt_summary"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:textSize="17sp"
            android:textStyle="bold"
            android:padding="2dp"
            android:text="@string/end_time_label"
            android:textColor="#000000"/>

    <Button
        android:id="@+id/sqt_clear_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/sqt_end_time"
        android:layout_below="@id/sqt_summary"
        android:layout_marginLeft="12dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:textSize="17sp"
        android:padding="2dp"
        android:text="@string/clear_label"
        android:textColor="#000000"/>

    <CheckBox
        android:id="@+id/sqt_do_not_vibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sqt_start_time"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dont_vibrate_either"
        />


</RelativeLayout>
